--- a/main.html
+++ b/main.html
@@ -7,9 +7,14 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div class="movie-container">
+    <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="Movie Poster" class="moviePic">
+    <p class="movieDetail">
+      A thrilling movie about an unexpected journey filled with drama, action, and heartwarming moments. 
+      The story follows a young hero who must overcome extraordinary obstacles to save the day.
+    </p>
+  </div>
+
 
 </body>
 
